scripts/manifests/istio-components/online-store-web-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: online-store-web-virtual-service
spec:
  hosts:
  - learnmicroservices.org
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: online-store-web
        port:
          number: 80
