scripts/manifests/istio-components/user-service-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-service-virtual-service
spec:
  hosts:
  - auth.learnmicroservices.org
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: user-service
        port:
          number: 80
